report.html: fixed sidebar being visible darkmode
A small part of the sidebar was visible when collapsed if the page background was not the same color as the sidebar background (e.g. when browser was on darkmode).

Fixed by pushing 1rem to the left when collapsed.

--- a/doc/css/sidebar-styles.css
+++ b/doc/css/sidebar-styles.css
@@ -5,7 +5,7 @@
   }
   
 #sidebar-wrapper {
-  margin-left: -15rem;
+  margin-left: -16rem;
   transition: margin 0.25s ease-out;
 }
 
